<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ui.activity.LoginActivity">
    <TextView
            android:id="@+id/account_text"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:text="@string/app_name"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Title"
    />
    <!-- Login progress -->

    <EditText
            android:id="@+id/recharge_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recharge_code"
            android:imeActionId="7"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true"/>
    <Button
            android:id="@+id/commit_btn"
            android:text="@string/recharge_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/account_recharge_more"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottombar_height"
            android:text="@string/other_recharge"
            android:gravity="center"
            android:layout_marginTop="25dp"
    />
</LinearLayout>