<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ui.activity.LoginActivity">
    <TextView
            android:id="@+id/account_text"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/app_name"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Title"
    />
    <!-- Login progress -->

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/exact_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_account"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
        <com.rilixtech.CountryCodePicker
                android:id="@+id/ccp_login"
                android:gravity="center_vertical"
                app:ccp_enableHint="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/phone_number_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_note"
                android:imeActionId="6"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/commit_btn"
            android:text="@string/credit_transfer_btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>