<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mero="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/information_me_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <elf.m.passportsimple.ui.view.ToolbarControl
        android:id="@+id/id_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/information_me"
        app:backText="@string/toolbar_normal_back"
        app:backimage="@drawable/ic_normal_back" />
    <RelativeLayout
        android:id="@+id/information_me_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/information_bg_color"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
    >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/bg_information_user"
        >
            <elf.m.passportsimple.ui.view.HeaderCircleImageView
                android:id="@+id/cloud_icon_iv"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                mero:civ_border_color="#EBEDFF"
                mero:civ_border_width="3.3dp"
                android:src="@drawable/ic_unlogin"/>
         <!--   <com.ddup.store.ui.view.InformationEditText
                android:id="@+id/information_me_name_et"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/information_me_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:drawableEnd="@drawable/ic_user_name_edit"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:layoutDirection="ltr"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/fragment_me_account"
                android:textColor="@android:color/black" android:textColorHighlight="#ffCCCCCC"
                android:textSize="16.67sp" android:textStyle="normal"/>-->
        </RelativeLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/information_item_group_style">
        <elf.m.passportsimple.ui.view.PreferenceItemView
                android:id="@+id/information_first_name"
                mero:item_text="@string/information_me_first_name_string"
                mero:item_tip="@string/information_me_todo_string"
                mero:image_type_src="@drawable/ic_information_gender"
                mero:next_tip_coexist="true"
                style="@style/information_item_style"
        />
        <elf.m.passportsimple.ui.view.PreferenceItemView
                android:id="@+id/information_last_name"
                mero:item_text="@string/information_me_last_name_string"
                mero:item_tip="@string/information_me_todo_string"
                mero:image_type_src="@drawable/ic_information_gender"
                mero:next_tip_coexist="true"
                style="@style/information_item_style"
        />
        <elf.m.passportsimple.ui.view.PreferenceItemView
            android:id="@+id/information_gender"
            mero:item_text="@string/information_me_sex_string"
            mero:item_tip="@string/information_me_todo_string"
            mero:image_type_src="@drawable/ic_information_gender"
            mero:next_tip_coexist="true"
            style="@style/information_item_style"
        />
        <elf.m.passportsimple.ui.view.PreferenceItemView
            android:id="@+id/information_birthday"
            mero:item_text="@string/information_me_birthday_string"
            mero:item_tip="@string/information_me_todo_string"
            mero:image_type_src="@drawable/ic_information_birthday"
            mero:next_tip_coexist="true"
            style="@style/information_item_style"
        />
        <elf.m.passportsimple.ui.view.PreferenceItemView
            android:id="@+id/information_location"
            mero:item_text="@string/information_me_location_string"
            mero:item_tip="@string/information_me_todo_string"
            mero:image_type_src="@drawable/ic_information_location"
            mero:next_tip_coexist="true"
            style="@style/information_item_style"
        />
        <elf.m.passportsimple.ui.view.PreferenceItemView
                android:id="@+id/information_country"
                mero:item_text="@string/information_me_country_string"
                mero:item_tip="@string/information_me_todo_string"
                mero:image_type_src="@drawable/ic_information_location"
                mero:next_tip_coexist="true"
                style="@style/information_item_style"
        />
    </LinearLayout>
<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/diver_personal_drawable"
        android:showDividers="middle"
        android:background="@drawable/divider_bg"
        android:orientation="vertical"
        >
        <com.ddup.store.ui.view.PreferenceItemView
            android:id="@+id/information_me_wexin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            mero:item_text="@string/information_me_wexin_string"
            mero:item_tip="@string/information_me_unbind_string"
            mero:image_type_src="@drawable/ic_information_wechat"
            mero:next_tip_coexist="true"
        />
        <com.ddup.store.ui.view.PreferenceItemView
            android:id="@+id/information_me_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            mero:item_text="@string/information_me_facebook_string"
            mero:item_tip="@string/information_me_unbind_string"
            mero:image_type_src="@drawable/ic_information_facebook"
            mero:next_tip_coexist="true"
        />
        <com.ddup.store.ui.view.PreferenceItemView
            android:id="@+id/information_me_twttier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            mero:item_text="@string/information_me_twitter_string"
            mero:item_tip="@string/information_me_unbind_string"
            mero:image_type_src="@drawable/ic_information_twitter"
            mero:next_tip_coexist="true"
        />
    </LinearLayout>-->
</LinearLayout>
