<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ui.activity.LoginActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:text="@string/title_forgot_password"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Title"
    />
    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>


        <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <com.rilixtech.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                >
                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/phone_number_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"/>
                    <!-- <EditText
                             android:id="@+id/register_phone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/register_verify_password"
                             android:imeActionId="6"
                             android:imeActionLabel="@string/action_sign_in_short"
                             android:imeOptions="actionUnspecified"
                             android:inputType="phone"
                             android:maxLines="1"
                             android:singleLine="true"/>-->
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                    android:id="@+id/send_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sent_otp"
                    style="?android:textAppearanceSmall"
                    android:textStyle="bold"/>

        </LinearLayout>
</LinearLayout>